# lab03-uml-relationships-jokers

./: .replit  CMakeLists.txt  Main.cpp  Medicamento.cpp  Medicamento.h  Paciente.cpp  Paciente.h  PacienteAsintomatico.cpp  PacienteAsintomatico.h  PacienteConSintomas.cpp  PacienteConSintomas.h  PacienteCovid19.cpp  PacienteCovid19.h  README.md  Tratamiento.cpp  Tratamiento.h
diagram/: diagram-here.rtf
